added abilty to read csv file

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/NakxH/pimberly-backend-tech-test#readme",
   "dependencies": {
+    "csv-parser": "^3.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.5"
   }
